# splitter

./: Cargo.toml  LICENSE.txt  readme.markdown
benches/: splitters.rs
src/: lib.rs
