[package]
name = "split_benches"
version = "0.1.0"
authors = ["Sam Schlinkert <sschlinkert@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "splitters"
harness = false
